Fix alignment of facettes

--- a/core-bundle/assets/styles/backend-search/facet.pcss
+++ b/core-bundle/assets/styles/backend-search/facet.pcss
@@ -49,6 +49,7 @@
         margin: 2px 0;
         border: none;
         width: 100%;
+        text-align: left;
         background: transparent;
 
         &.active {
